[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/snailbert.gd" type="Script" id=1]
[ext_resource path="res://images/snailbert.png" type="Texture" id=2]
[ext_resource path="res://images/z_particle.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 36, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 36, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 12, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 36, 0, 12, 10 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "awake",
"speed": 3.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "sleep",
"speed": 3.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="Gradient" id=18]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="snailbert" type="AnimatedSprite"]
position = Vector2( -12, -13 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
animation = "walk"
frame = 3
playing = true
script = ExtResource( 1 )

[node name="delay_timer" type="Timer" parent="."]
one_shot = true

[node name="next_event_timer" type="Timer" parent="."]
one_shot = true

[node name="z_particles" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 1.5, -5 )
amount = 3
lifetime = 6.0
randomness = 0.2
texture = ExtResource( 3 )
direction = Vector2( 0, -1 )
spread = 25.0
gravity = Vector2( 0, 0 )
initial_velocity = 3.0
initial_velocity_random = 0.2
color_ramp = SubResource( 18 )

[connection signal="timeout" from="next_event_timer" to="." method="_on_NextEventTimer_timeout"]
